# Lab3_voronoi

./: CMakeLists.txt  main.cpp  voronoi.cpp  voronoi.h
